--- a/x10.man/paper/master.bib
+++ b/x10.man/paper/master.bib
@@ -551,6 +551,17 @@ note = {To appear in Electronic Notes in Theoretical Computer Science}
   year = 2002
 }
 
+@article{nelson-oppen,
+  author = "G. Nelson and D. Oppen",
+  title = "Simplification by cooperating decision procedures",
+  journal = toplas,
+  volume = 1,
+  number = 2,
+  paves = "245--257",
+  month = oct,
+  year = 1979
+}
+
 @incollection{ smolka95:oz-programming:inc,
 	author={Gert Smolka},
 	title={The {O}z Programming Model},
