--- a/x10.man/paper/semantics.tex
+++ b/x10.man/paper/semantics.tex
@@ -17,186 +17,8 @@ method on the class.
 We do model properties, constrained clauses, class invariants, where
 clauses in methods and constructors, and dependent type casts.
 
+\subsection{Constraint system}
 
-\begin{figure*}
-
-\paragraph{Syntax for \CFJ.}
-The definitions are based on those in Featherweight Java~\cite{FJ}. 
-
-\begin{tabular}{rrcl}
-&&&\\
-(Class) & {\tt L} &{::=}& $\tt\class \ C(\bar{T}\ \bar{f}:c)\  \extends\ T\ \{\bar{M}\}$ \\
-(Method)& {\tt M} &{::=}& $\tt T\ m(\bar{T}\ \bar{x}:c)\{\return\ e;\}$\\
-(Expr)& {\tt e} &{::=}& $\tt x \alt e.f \alt e.m(\bar{e})\alt \new\ C(\bar{e})\alt (T)e$ \\
-(Type)& {\tt S},{\tt T},{\tt U},{\tt Z}&{::=}& $\tt C(:d)$\\
-&&&\\
-\end{tabular}
-
-The {\em base type} of a type {\tt C(:c)} (read as {\em {\tt C} with
-{\tt c}}) is {\tt C}.  We use the following shorthand for types: For a
-type {\tt T} equal to {\tt C(:c)}, we will write {\tt S\ x; T} for
-{\tt C(:S\ x; c)}, and {\tt d,T} for {\tt C(:d,c)}.
-Application of substitutions is extended to
-types by: ${\tt C(:c)\theta}={\tt C(:c\theta)}$.
-
-\paragraph{\CFJ{} subtyping judgment.}\label{CFJ-subtyping}
-We add a single rule to the rules of \FJ:
-$$
-\begin{array}{llll}
- {\tt C} \subtype {\tt C}
-&
-\from{\class\ {\tt C(\ldots)}\ \extends\ {\tt D(\ldots)}\{\ldots\}}
-\infer{{\tt C} \subtype {\tt D}}
-& 
-\from{{\tt C} \subtype {\tt D} \ \ \ {\tt D} \subtype {\tt E}}
-\infer{{\tt C} \subtype {\tt E}} &
-\from{
-\begin{array}{ll}
-{\tt C} \subtype {\tt D} &
-\sigma(\Gamma, {\tt C(:c)}\ {\tt x}) \vdash_{\cal C} {\tt d}[{\tt x}/\self] \ \ \mbox{({\tt x} fresh)}
-\end{array}}
-\infer{\Gamma \vdash {\tt C(:c) \subtype D(:d)}}
-\end{array}
-$$
-
-(Whenever we state an assumption of the form ``{\tt x} is
-fresh'' in a rule we mean it is not free in the consequent of the
-rule.)
-
-\paragraph{\CFJ{} typing judgment.}\label{CFJ-typing}
-We let $\Gamma$ stand for multisets of type assertions, of the form
-${\tt T\ x}$,\footnote{We use the non-standard notation ${\tt T\ x}$
-rather than the more familiar ${\tt x} : {\tt T}$ since {\tt :} is
-used in the syntax of a type.}  and constraints. Typing judgments are
-of the form $\Gamma\vdash {\tt S\ t}$ When $\Gamma$ is empty, it is
-omitted. 
-
-Let {\tt C} be a class declared as ${\tt \class\ C(\bar{\tt T}\
-\bar{\tt f}:c)\ extends\ D(:d)\{\bar{\tt M}\}}$. Let
-$\theta$ be a substitution and the type {\tt T} be based on {\tt C}.
-We define $\inv(T,\theta)$
-as the conjunction ${\tt c\theta,d\theta}$ and (recursively)
-$\inv({\tt D},\theta)$.  We bottom out with $\inv({\tt
-Object},\theta)=\true$. For a variable {\tt x}, we use the shorthand
-$\inv({\tt C},{\tt x})$ to mean $\inv({\tt C},[{\tt x}/\self])$.
-
-The definition of {\mtype({\tt C},{\tt m})} (the signature of a method
-named {\tt m} in class {\tt C}), {\mbody({\tt C},{\tt m})}, (the body
-associated with method {\tt m} in type {\tt C}) and \fields(C) (the
-sequence of fields and their types inherited or defined at {\tt C}) is
-essentially as specified in FJ~\cite{FJ} with the difference that the
-method of a signature is taken to be of the form $\bar{\tt S}\ \bar{\tt
-x}: {\tt c} \rightarrow {\tt T}$.  The variables {\tt x} are permitted
-to occur in the types $\bar{\tt S},{\tt T}$, and are considered bound,
-and subject to alpha-renaming.  The definitions of \mtype, \mbody,
-\fields{} are extended to apply to constrained types by ignoring the
-constraint.  For a substitution $\theta$ we define $\mtype({\tt
-T},{\tt m},\theta)$ as the signature obtained by applying $\theta$ to
-$\mtype({\tt T},{\tt m})$, renaming bound variables as necessary.
-Similarly, for a substitution $\theta$ we define $\fields({\tt
-T},\theta)$ to be $\bar{S}\theta\ \bar{f}$, if the sequence of
-inherited and defined fields of the class underlying the type {\tt T}
-is $\bar{S}\ \bar{f}$. We let $\fields({\tt T},{\tt x})$ stand for
-$\fields({\tt T},[{\tt x}/\self]))$.
-
-We define $\sigma(\Gamma)$ to be the set of
-constraints obtained from $\Gamma$ by replacing each type assertion
-${\tt C(:d)\ x}$ in $\Gamma$ with ${\tt d}[{\tt x}/\self],\inv(C,x)$
-and retaining any constraint in $\Gamma$.
-
-$$
-\begin{array}{l}
-\begin{array}{lll}
-\rname{T-Var}%
-\from{\sigma(\Gamma, {\tt C(:c)}\ {\tt x}) \vdash_{\cal C} {\tt d}[{\tt x}/\self]}
-\infer{\Gamma, {\tt C(:c)\ x} \vdash {\tt C(:d)}\ {\tt x}} &
-\rname{T-Field}%
-\from{\Gamma \vdash {\tt T}_0\ {\tt e} \ \ \ \fields({\tt T}_0,{\tt z}_0)= \bar{\tt U}\ \bar{\tt f}_i \ \ \ \mbox{(${\tt z}_0$ fresh)}} 
-\infer{\Gamma \vdash ({\tt T}_0\ {\tt z}_0; {\tt z}_0.{\tt f}_i=\self;{\tt U}_i)\ {\tt e.f}_i} 
-& 
-\rname{T-Cast}%
-\from{\Gamma \vdash {\tt S}\ {\tt e}}
-\infer{\Gamma \vdash {\tt T}\ {\tt (T) e}}
-\end{array}
-\\  \quad \\
-\begin{array}{ll}
-\rname{T-Invk}%
-\from{\begin{array}{ll}
-\Gamma \vdash {\tt T}_{0:n} \ {\tt e}_{0:n}  &
-\mtype({\tt T}_0,{\tt m},{\tt z}_0)= \tt {\tt Z}_{1:n}\ {\tt z}_{1:n}:c \rightarrow {\tt S} \\
-\Gamma, {\tt T}_{0:n}\ {\tt z}_{0:n} \vdash {\tt T}_{1:n} \subtype {\tt Z}_{1:n}&
-\sigma(\Gamma, {\tt T}_{0:n}\ {\tt z}_{0:n}) \vdash_{\cal C} {\tt c} \ \ \ 
-\mbox {(${\tt z}_{0:n}$ fresh)}
-\end{array}}
-\infer{\Gamma \vdash ({\tt T}_{0:n}\ {\tt z}_{0:n}; S)\ {\tt e}_0.{\tt m({\tt e}_{1:n})}}&
-\rname{T-New}%
-\from{
-  \begin{array}{ll}
-    \Gamma \vdash \bar{\tt T}\ \bar{\tt e} \ \ \
-  \theta=[\bar{\tt f}/\this.\bar{\tt f}] & 
-    \fields(C,\theta)=\bar{\tt Z}\ \bar{\tt f} \\
-    \Gamma, \bar{\tt T}\ \bar{\tt f} \vdash \bar{\tt T} \subtype \bar{\tt Z} &
-    \sigma(\Gamma, \bar{\tt T}\ \bar{\tt f}) \vdash_{\cal C} \inv({\tt C},\theta) 
-  \end{array}
-}
-\infer{\Gamma \vdash {\tt C(:\bar{T}\ \bar{\tt f}{\tt ;\self.\bar{f}}=\bar{\tt f})\ \new\ {\tt C(\bar{\tt e})}}} \\
-\end{array}
-\end{array}
-$$
-\paragraph{Method and class typing.}
-$$
-\begin{array}{ll}
-\from{ \bar{\tt T}\ \bar{\tt x}, {\tt C}\ \this, {\tt c} \vdash {\tt S}\ {\tt e}, {\tt S} \subtype {\tt T} }   
-\infer{\tt T\ m(\bar{\tt T}\,\bar{\tt x} : c)\{\return\ e;\}\ \mbox{OK in}\ C} &
-\from{\bar{M}\ \mbox{OK in}\ C}
-\infer{\tt \class\ C(\bar{\tt T}\ \bar{\tt f}:c)\ \extends\ D(:d)\ \{\bar{M}\}\ \mbox{OK}} 
-\end{array}
-$$
-
-\paragraph{Computation.}
-$$
-\begin{array}{ccc}
-\rname{{\sc R-Field}}%
-\from{\fields(C)=\bar{C}\ \bar{f}}
-\infer{(\new\ {\tt C}(\bar{\tt e})).{\tt f}_i \derives {\tt e}_i} &
-\rname{{\sc R-Invk}}%
-\from{mbody({\tt m},{\tt C})=\bar{x}. {\tt e}_0}
-\infer{(\new\ {\tt C}(\bar{\tt e})).{\tt m}(\bar{\tt d}) \derives 
-[\bar{d}/\bar{x},\new\ C(\bar{e})/\this]{\tt e}_0} &
-\rname{{\sc R-Cast}}%
-\from{\vdash C \subtype T[\new\ C(\bar{\tt d})/\self]}
-\infer{{\tt (T)(\new\ C(\bar{\tt d}))} \derives \new\ C(\bar{\tt d})}
-\end{array}
-$$
-\paragraph{Congruence.}
-$$
-\begin{array}{l}
-\begin{array}{ccc}
-\rname{{\sc RC-Field}}%
-\from{{\tt e}_0 \derives {{\tt e}_0}'}
-\infer{{\tt e}_0.{\tt f} \derives {{\tt e}_0}'.{\tt f}} &
-\rname{{\sc RC-Invk-Recv}}%
-\from{{\tt e}_0 \derives {{\tt e}_0}'}
-\infer{{\tt e}_0.{\tt m}(\bar{\tt e}) \derives {{\tt e}_0}'.{\tt m}(\bar{\tt e})} &
-\rname{{\sc RC-Invk-Arg}}%
-\from{{\tt e}_i \derives {{\tt e}_i}'}
-\infer{{\tt e}_0.{\tt m}(\ldots,{\tt e}_i,\ldots) \derives {{\tt e}_0}.{\tt m}(\ldots,{\tt e}_i',\ldots)} 
-\end{array}
-\\ \quad \\
-\begin{array}{cc}
-\rname{{\sc RC-New-Arg}}%
-\from{{\tt e}_i \derives {{\tt e}_i}'}
-\infer{\new\ {\tt C}(\ldots,{\tt e}_i,\ldots) \derives \new\ {\tt C}(\ldots,{\tt e}_i',\ldots)} &
-\rname{{\sc RC-Cast}}%
-\from{{\tt e}_0 \derives {{\tt e}_0}'}
-\infer{{\tt (C) e}_0 \derives {{\tt (C) e}_0}'}
-\end{array}
-\end{array}
-$$
-\caption{The system Constrained \FJ}\label{CFJ-red-rules}
-\end{figure*}
-
-\paragraph{Constraint system.}
 Constraints are assumed to be drawn from a fixed constraint system,
 $\cal C$, with inference relation $\vdash_{\cal C}$ \cite{CCCC}.
 All
@@ -235,13 +57,21 @@ variable {\tt x} of type {\tt T} in {\tt c}. {\tt p} ranges over
 the collection of predicates supplied by the underlying constraint
 system, and {\tt g} over the collection of functions.
 
+\subsection{Syntax}
 
-\paragraph{Syntax.}
-The syntax for the language is specified in Figure~\ref{CFJ-red-rules}.
+The syntax for the language is specified in Figure~\ref{CFJ-syntax}.
+The definitions are based on those in Featherweight Java~\cite{FJ}. 
 
 A type is taken to be of the form {\tt C(:c)} where {\tt C} is the
 name of a class or interface and {\tt c} is a constraint; we say that
 {\tt C} is the {\em base} of the type {\tt C(:c)}.
+
+The {\em base type} of a type {\tt C(:c)} (read as {\em {\tt C} with
+{\tt c}}) is {\tt C}.  We use the following shorthand for types: For a
+type {\tt T} equal to {\tt C(:c)}, we will write {\tt S\ x; T} for
+{\tt C(:S\ x; c)}, and {\tt d,T} for {\tt C(:d,c)}.
+Application of substitutions is extended to
+types by: ${\tt C(:c)\theta}={\tt C(:c\theta)}$.
 
 A type assertion {\tt C(:c) x} constrains the variable {\tt x} to
 contain references to only those objects {\tt o} that are instances of
@@ -275,6 +105,22 @@ types $\bar{\tt T}$ and the return type ${\tt T}_0$.  The constraint
 x}$ and
 \this{} that must hold for a method invocation to be legal. Note that
 \self{} does not make sense in {\tt c} (no type is being defined), and must not occur in {\tt c}.
+
+\begin{figure}
+\begin{tabular}{rrcl}
+&&&\\
+(Class) & {\tt L} &{::=}& $\tt\class \ C(\bar{T}\ \bar{f}:c)\  \extends\ T\ \{\bar{M}\}$ \\
+(Method)& {\tt M} &{::=}& $\tt T\ m(\bar{T}\ \bar{x}:c)\{\return\ e;\}$\\
+(Expr)& {\tt e} &{::=}& $\tt x \alt e.f \alt e.m(\bar{e})\alt \new\ C(\bar{e})\alt (T)e$ \\
+(Type)& {\tt S},{\tt T},{\tt U},{\tt Z}&{::=}& $\tt C(:d)$\\
+&&&\\
+\end{tabular}
+
+\caption{CFJ Syntax}
+\label{CFJ-syntax}
+\end{figure}
+
+\subsection{Static semantics}
 
 \paragraph{Type judgments.}
 Typing judgments are of the form $\Gamma \vdash {\tt T}\ {\tt e}$
@@ -356,6 +202,180 @@ expression contains all the information that can be gleaned from the
 static types of the actuals by assigning them to the corresponding
 fields of the object being created.
 
+
+\paragraph{Subtyping.}\label{CFJ-subtyping}
+We add a single rule to the rules of \FJ:
+$$
+\begin{array}{llll}
+ {\tt C} \subtype {\tt C}
+&
+\from{\class\ {\tt C(\ldots)}\ \extends\ {\tt D(\ldots)}\{\ldots\}}
+\infer{{\tt C} \subtype {\tt D}}
+& 
+\from{{\tt C} \subtype {\tt D} \ \ \ {\tt D} \subtype {\tt E}}
+\infer{{\tt C} \subtype {\tt E}} &
+\from{
+\begin{array}{ll}
+{\tt C} \subtype {\tt D} &
+\sigma(\Gamma, {\tt C(:c)}\ {\tt x}) \vdash_{\cal C} {\tt d}[{\tt x}/\self] \ \ \mbox{({\tt x} fresh)}
+\end{array}}
+\infer{\Gamma \vdash {\tt C(:c) \subtype D(:d)}}
+\end{array}
+$$
+
+(Whenever we state an assumption of the form ``{\tt x} is
+fresh'' in a rule we mean it is not free in the consequent of the
+rule.)
+
+\paragraph{Typing judgment.}
+\label{CFJ-typing}
+
+We let $\Gamma$ stand for multisets of type assertions, of the form
+${\tt T\ x}$,\footnote{We use the non-standard notation ${\tt T\ x}$
+rather than the more familiar ${\tt x} : {\tt T}$ since {\tt :} is
+used in the syntax of a type.}  and constraints. Typing judgments are
+of the form $\Gamma\vdash {\tt S\ t}$ When $\Gamma$ is empty, it is
+omitted. 
+
+Let {\tt C} be a class declared as ${\tt \class\ C(\bar{\tt T}\
+\bar{\tt f}:c)\ extends\ D(:d)\{\bar{\tt M}\}}$. Let
+$\theta$ be a substitution and the type {\tt T} be based on {\tt C}.
+We define $\inv(T,\theta)$
+as the conjunction ${\tt c\theta,d\theta}$ and (recursively)
+$\inv({\tt D},\theta)$.  We bottom out with $\inv({\tt
+Object},\theta)=\true$. For a variable {\tt x}, we use the shorthand
+$\inv({\tt C},{\tt x})$ to mean $\inv({\tt C},[{\tt x}/\self])$.
+
+The definition of {\mtype({\tt C},{\tt m})} (the signature of a method
+named {\tt m} in class {\tt C}), {\mbody({\tt C},{\tt m})}, (the body
+associated with method {\tt m} in type {\tt C}) and \fields(C) (the
+sequence of fields and their types inherited or defined at {\tt C}) is
+essentially as specified in FJ~\cite{FJ} with the difference that the
+method of a signature is taken to be of the form $\bar{\tt S}\ \bar{\tt
+x}: {\tt c} \rightarrow {\tt T}$.  The variables {\tt x} are permitted
+to occur in the types $\bar{\tt S},{\tt T}$, and are considered bound,
+and subject to alpha-renaming.  The definitions of \mtype, \mbody,
+\fields{} are extended to apply to constrained types by ignoring the
+constraint.  For a substitution $\theta$ we define $\mtype({\tt
+T},{\tt m},\theta)$ as the signature obtained by applying $\theta$ to
+$\mtype({\tt T},{\tt m})$, renaming bound variables as necessary.
+Similarly, for a substitution $\theta$ we define $\fields({\tt
+T},\theta)$ to be $\bar{S}\theta\ \bar{f}$, if the sequence of
+inherited and defined fields of the class underlying the type {\tt T}
+is $\bar{S}\ \bar{f}$. We let $\fields({\tt T},{\tt x})$ stand for
+$\fields({\tt T},[{\tt x}/\self]))$.
+
+We define $\sigma(\Gamma)$ to be the set of
+constraints obtained from $\Gamma$ by replacing each type assertion
+${\tt C(:d)\ x}$ in $\Gamma$ with ${\tt d}[{\tt x}/\self],\inv(C,x)$
+and retaining any constraint in $\Gamma$.
+
+\begin{figure}
+
+$$
+\begin{array}{l}
+\begin{array}{lll}
+\rname{T-Var}%
+\from{\sigma(\Gamma, {\tt C(:c)}\ {\tt x}) \vdash_{\cal C} {\tt d}[{\tt x}/\self]}
+\infer{\Gamma, {\tt C(:c)\ x} \vdash {\tt C(:d)}\ {\tt x}} &
+\rname{T-Field}%
+\from{\Gamma \vdash {\tt T}_0\ {\tt e} \ \ \ \fields({\tt T}_0,{\tt z}_0)= \bar{\tt U}\ \bar{\tt f}_i \ \ \ \mbox{(${\tt z}_0$ fresh)}} 
+\infer{\Gamma \vdash ({\tt T}_0\ {\tt z}_0; {\tt z}_0.{\tt f}_i=\self;{\tt U}_i)\ {\tt e.f}_i} 
+& 
+\rname{T-Cast}%
+\from{\Gamma \vdash {\tt S}\ {\tt e}}
+\infer{\Gamma \vdash {\tt T}\ {\tt (T) e}}
+\end{array}
+\\  \quad \\
+\begin{array}{ll}
+\rname{T-Invk}%
+\from{\begin{array}{ll}
+\Gamma \vdash {\tt T}_{0:n} \ {\tt e}_{0:n}  &
+\mtype({\tt T}_0,{\tt m},{\tt z}_0)= \tt {\tt Z}_{1:n}\ {\tt z}_{1:n}:c \rightarrow {\tt S} \\
+\Gamma, {\tt T}_{0:n}\ {\tt z}_{0:n} \vdash {\tt T}_{1:n} \subtype {\tt Z}_{1:n}&
+\sigma(\Gamma, {\tt T}_{0:n}\ {\tt z}_{0:n}) \vdash_{\cal C} {\tt c} \ \ \ 
+\mbox {(${\tt z}_{0:n}$ fresh)}
+\end{array}}
+\infer{\Gamma \vdash ({\tt T}_{0:n}\ {\tt z}_{0:n}; S)\ {\tt e}_0.{\tt m({\tt e}_{1:n})}}&
+\rname{T-New}%
+\from{
+  \begin{array}{ll}
+    \Gamma \vdash \bar{\tt T}\ \bar{\tt e} \ \ \
+  \theta=[\bar{\tt f}/\this.\bar{\tt f}] & 
+    \fields(C,\theta)=\bar{\tt Z}\ \bar{\tt f} \\
+    \Gamma, \bar{\tt T}\ \bar{\tt f} \vdash \bar{\tt T} \subtype \bar{\tt Z} &
+    \sigma(\Gamma, \bar{\tt T}\ \bar{\tt f}) \vdash_{\cal C} \inv({\tt C},\theta) 
+  \end{array}
+}
+\infer{\Gamma \vdash {\tt C(:\bar{T}\ \bar{\tt f}{\tt ;\self.\bar{f}}=\bar{\tt f})\ \new\ {\tt C(\bar{\tt e})}}} \\
+\end{array}
+\end{array}
+$$
+
+\paragraph{Method and class typing.}
+$$
+\begin{array}{ll}
+\from{ \bar{\tt T}\ \bar{\tt x}, {\tt C}\ \this, {\tt c} \vdash {\tt S}\ {\tt e}, {\tt S} \subtype {\tt T} }   
+\infer{\tt T\ m(\bar{\tt T}\,\bar{\tt x} : c)\{\return\ e;\}\ \mbox{OK in}\ C} &
+\from{\bar{M}\ \mbox{OK in}\ C}
+\infer{\tt \class\ C(\bar{\tt T}\ \bar{\tt f}:c)\ \extends\ D(:d)\ \{\bar{M}\}\ \mbox{OK}} 
+\end{array}
+$$
+
+\caption{Typing rules}
+\label{CFJ-typing}
+\end{figure}
+
+\begin{figure}
+
+\paragraph{Computation.}
+$$
+\begin{array}{ccc}
+\rname{{\sc R-Field}}%
+\from{\fields(C)=\bar{C}\ \bar{f}}
+\infer{(\new\ {\tt C}(\bar{\tt e})).{\tt f}_i \derives {\tt e}_i} &
+\rname{{\sc R-Invk}}%
+\from{mbody({\tt m},{\tt C})=\bar{x}. {\tt e}_0}
+\infer{(\new\ {\tt C}(\bar{\tt e})).{\tt m}(\bar{\tt d}) \derives 
+[\bar{d}/\bar{x},\new\ C(\bar{e})/\this]{\tt e}_0} &
+\rname{{\sc R-Cast}}%
+\from{\vdash C \subtype T[\new\ C(\bar{\tt d})/\self]}
+\infer{{\tt (T)(\new\ C(\bar{\tt d}))} \derives \new\ C(\bar{\tt d})}
+\end{array}
+$$
+\paragraph{Congruence.}
+$$
+\begin{array}{l}
+\begin{array}{ccc}
+\rname{{\sc RC-Field}}%
+\from{{\tt e}_0 \derives {{\tt e}_0}'}
+\infer{{\tt e}_0.{\tt f} \derives {{\tt e}_0}'.{\tt f}} &
+\rname{{\sc RC-Invk-Recv}}%
+\from{{\tt e}_0 \derives {{\tt e}_0}'}
+\infer{{\tt e}_0.{\tt m}(\bar{\tt e}) \derives {{\tt e}_0}'.{\tt m}(\bar{\tt e})} &
+\rname{{\sc RC-Invk-Arg}}%
+\from{{\tt e}_i \derives {{\tt e}_i}'}
+\infer{{\tt e}_0.{\tt m}(\ldots,{\tt e}_i,\ldots) \derives {{\tt e}_0}.{\tt m}(\ldots,{\tt e}_i',\ldots)} 
+\end{array}
+\\ \quad \\
+\begin{array}{cc}
+\rname{{\sc RC-New-Arg}}%
+\from{{\tt e}_i \derives {{\tt e}_i}'}
+\infer{\new\ {\tt C}(\ldots,{\tt e}_i,\ldots) \derives \new\ {\tt C}(\ldots,{\tt e}_i',\ldots)} &
+\rname{{\sc RC-Cast}}%
+\from{{\tt e}_0 \derives {{\tt e}_0}'}
+\infer{{\tt (C) e}_0 \derives {{\tt (C) e}_0}'}
+\end{array}
+\end{array}
+$$
+
+\caption{Reduction rules}
+\label{CFJ-red-rules}
+\end{figure}
+
+\subsection{Soundness}
+
+
 \begin{theorem}[Subject Reduction] 
 
 If $\Gamma \vdash T\ e$ and $e \derives e'$, then for some type $S$,
@@ -416,8 +436,8 @@ $\bar{\tt T}\ \bar{\tt x},{\tt U}_0\ \this \vdash {\tt V}\ {\tt e}$
 Constrained types in CFJ are a form of {\em refinement
 type}~\cite{refinement-types}.  If constraints are erased from a
 well-typed program,
-the resulting program will behave identically to the unerased
-program except that the unerased program might be unable to take
+the resulting program will behave identically to the original unerased
+program except that the original program might be unable to take
 a step on a cast.
 
 Let $\Lb {\tt e} \Rb$ be the erasure of ${\tt e}$ defined as follows:
@@ -426,13 +446,13 @@ Let $\Lb {\tt e} \Rb$ be the erasure of ${\tt e}$ defined as follows:
 \Lb {\tt e}.{\tt f} \Rb &= \Lb {\tt e} \Rb.{\tt f} \\
 \Lb {\tt e}.{\tt m}(\bar{\tt e}) \Rb &= \Lb {\tt e} \Rb.{\tt m}(\bar{\Lb {\tt e} \Rb}) \\
 \Lb {\tt new}~{\tt C}(\bar{\tt e}) \Rb &= {\tt new}~{\tt C}(\bar{\Lb {\tt e} \Rb}) \\
-\Lb ({\tt C}(:{\tt c}))~{\tt e} \Rb &= (\tt C(: {\tt true}))~\bar{\Lb {\tt e} \Rb}
+\Lb ({\tt C}(:{\tt c}))~{\tt e} \Rb &= (\tt C)~\bar{\Lb {\tt e} \Rb}
 \end{align*}
 
 \begin{theorem}[Erasure]
 
 If $\vdash {\tt C}(:{\tt c})\ {\tt e}$ and ${\tt e} \starderives {\tt v}$,
-then $\vdash {\tt C}(:{\tt true})\ \Lb {\tt e} \Rb$ and $\Lb
+then $\vdash {\tt C}\ \Lb {\tt e} \Rb$ and $\Lb
 {\tt e} \Rb \starderives \Lb {\tt v} \Rb$.
 
 \end{theorem}
